objects/vlocity_cmt__QuoteGroup__c.object
<CustomObject>
    <description>A quote group can be a collection of service points or service accounts</description>
    <fields>
        <fullName>vlocity_cmt__AsyncJobId__c</fullName>
        <description>This stores asynchronus job id if any jobs running on this group.</description>
        <label>Async Job</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>This stores the asynchronous operation name if this group locked for asynchronous operation.</description>
        <label>Async Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply To Group</fullName>
                </value>
                <value>
                    <fullName>Price And Validate</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>Description of the group record</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExpectedMemberCount__c</fullName>
        <description>Expected member count in this group</description>
        <label>Expected Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GroupCartId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to group cart or associate cart.</description>
        <label>Group Cart</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Cart Groups</relationshipLabel>
        <relationshipName>QuoteCartGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasUnappliedGroupItems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the group has pending configurations to be applied</description>
        <label>Has Unapplied Group Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasUnappliedMembers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if at least one member of the group has no quote created</description>
        <label>Has Unapplied Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This indicates if a quote group locked by a user.</description>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Quote Groups</relationshipLabel>
        <relationshipName>QuoteGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LockedFor__c</fullName>
        <description>This stores the reason for doing lock on quote member.</description>
        <label>Locked For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Async Operation</fullName>
                </value>
                <value>
                    <fullName>Manual Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of members in this group</description>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MemberType__c</fullName>
        <description>This store developer name of CPQ Member Type custom metadata.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ServicePoint</fullName>
                    <label>Service Point</label>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
                <value>
                    <fullName>ServiceAccount</fullName>
                    <label>Location</label>
                </value>
                <value>
                    <fullName>SubscriberAccount</fullName>
                    <label>Subscriber</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MultiServiceMessageData__c</fullName>
        <description>This field stores messages that are generated and displayed in a MultiService feature.</description>
        <label>Multi Service Message Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final one time cost total of all individual group items</description>
        <label>Group One Time Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeMarginTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One Time Margin Total of Quote Group</description>
        <label>One Time Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final one time total of all individual group items</description>
        <label>Group One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corresponding Opportunity Group from which this record is created</description>
        <label>Opportunity Group</label>
        <referenceTo>vlocity_cmt__OpportunityGroup__c</referenceTo>
        <relationshipLabel>Quote Groups</relationshipLabel>
        <relationshipName>QuoteGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteGroupMarginTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Margin of Quote Group</description>
        <label>Quote Group Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteId__c</fullName>
        <description>Parent Quote Id</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Groups</relationshipLabel>
        <relationshipName>QuoteGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final recurring cost total of all individual group items</description>
        <label>Group Recurring Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringMarginTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Recurring Margin Total of Quote Group</description>
        <label>Recurring Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final recurring total of all individual group items</description>
        <label>Group Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SelectedAssetsCommonConfiguration__c</fullName>
        <description>Common configuration json object related to selected assets in group members</description>
        <label>Selected Assets Common Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageCostTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final usage cost total of all individual group items</description>
        <label>Group Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Usage Margin Total of Quote Group</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsagePriceTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Final usage price total of all individual group items</description>
        <label>Group Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Group</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>